# OpenVINO-RemoteBlob-Sample

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
hello_remote_blob/: CMakeLists.txt  config.h  main.cpp  ssd300.xml  va_y_channel.cpp
public/ssd300/FP32/: ssd300.xml
